[package]
name = "chapter_3"
version = "0.1.0"
edition = "2021"

[dependencies]

# 정답 파일 - 각 예제를 개별적으로 실행 가능
[[bin]]
name = "01_functions"
path = "src/bin/01_functions.rs"

[[bin]]
name = "02_return"
path = "src/bin/02_return.rs"

[[bin]]
name = "03_scope"
path = "src/bin/03_scope.rs"

[[bin]]
name = "04_closure"
path = "src/bin/04_closure.rs"

# 연습문제 (quiz) - 빈칸을 채워서 완성하세요
[[bin]]
name = "01_functions_quiz"
path = "src/bin/01_functions_quiz.rs"

[[bin]]
name = "02_return_quiz"
path = "src/bin/02_return_quiz.rs"

[[bin]]
name = "03_scope_quiz"
path = "src/bin/03_scope_quiz.rs"

[[bin]]
name = "04_closure_quiz"
path = "src/bin/04_closure_quiz.rs"
