[package]
name = "chapter_4"
version = "0.1.0"
edition = "2021"

[dependencies]

# 연습문제 (quiz) - 빈칸을 채워서 완성하세요
[[bin]]
name = "01_if_else_quiz"
path = "src/bin/01_if_else_quiz.rs"

[[bin]]
name = "02_for_loop_quiz"
path = "src/bin/02_for_loop_quiz.rs"

[[bin]]
name = "03_while_loop_quiz"
path = "src/bin/03_while_loop_quiz.rs"

[[bin]]
name = "04_loop_quiz"
path = "src/bin/04_loop_quiz.rs"

[[bin]]
name = "05_match_quiz"
path = "src/bin/05_match_quiz.rs"
