[package]
name = "chapter_7"
version = "0.1.0"
edition = "2021"

[dependencies]

# 연습문제 (quiz) - 빈칸을 채워서 완성하세요
[[bin]]
name = "01_struct_basics_quiz"
path = "src/bin/01_struct_basics_quiz.rs"

[[bin]]
name = "02_impl_method_quiz"
path = "src/bin/02_impl_method_quiz.rs"

[[bin]]
name = "03_tuple_struct_quiz"
path = "src/bin/03_tuple_struct_quiz.rs"

[[bin]]
name = "04_trait_quiz"
path = "src/bin/04_trait_quiz.rs"

[[bin]]
name = "05_derive_quiz"
path = "src/bin/05_derive_quiz.rs"
